# claw-bazzar

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  LICENSE  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  railway.toml  skills-lock.json
.claude/: hook-test.tmp  settings.json
alembic/: env.py
app/: database.py  main.py  models.py  scheduler.py  schemas.py
contracts/: foundry.toml
docs/: agent-guide.md  codebase-guide.md  features.md  oracle-v2.md  oracle-v3.md  oracle_scoring_pipeline.md  overview.md  project-overview.md  trust.md  user-guide.md  x-article.md
frontend/: .env.local  .vade-report  next.config.ts  package-lock.json  package.json  vitest.config.ts
oracle/: arbiter.py  constraint_check.py  dimension_gen.py  dimension_score.py  gate_check.py  injection_guard.py  llm_client.py  oracle.py  score_individual.py
programs/challenge-escrow/: Cargo.toml
programs/challenge-escrow/src/: lib.rs
programs/staking-vault/: Cargo.toml
programs/staking-vault/src/: lib.rs
scripts/: e2e_challenge_arbitration.py  e2e_fastest_first.py  e2e_quality_first.py  fund_test_wallets.py  init_test_users.py  initialize-programs.ts
tests/: conftest.py  test_arbiter_coherence.py  test_arbiter_pool.py  test_arbiter_stub.py  test_arbiter_voting_api.py  test_arbitration.py  test_balance_events.py  test_bounty_model.py  test_challenge_api.py  test_challenge_integration.py  test_challenge_model.py  test_comparative_visibility.py  test_deposit.py  test_e2e_oracle_v3.py  test_escrow_service.py  test_escrow_settlement.py  test_github_auth.py  test_injection_guard.py  (+34 more)
(+130 files in other folders)
