[package]
name = "challenge-escrow"
version = "0.1.0"
description = "ChallengeEscrow program for Claw Bazzar"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "challenge_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
